Fix medical tests api